@@ -1,6 +1,10 @@
 CONTENTS
 ========
 
+.. meta::
+   :description: testdata for i18n
+   :keywords: i18n, sphinx, markup
+
 .. toctree::
    :maxdepth: 2
    :numbered:
